# llming-stage

./: CLAUDE.md  README.md  THIRD_PARTY.md  mkdocs.yml  pyproject.toml
docs/: api.md  assets.md  communication-model.md  installation.md  lazy-loading.md  llming-com.md  mkdocs.yml  security.md  shell.md
docs/content/: api.md  assets.md  communication-model.md  index.md  installation.md  lazy-loading.md  llming-com.md  shell.md  stage.md
llming_stage/: __init__.py  asset_server.py  cli.py  dev_reload.py  shell.py  stage.py  zip_server.py
llming_stage/fonts/: fonts.css
llming_stage/static/: loader.js  router.js
samples/: README.md  _common.py  gallery.py  run.sh
samples/01_static/: README.md  home.vue  main.py
samples/02_hello_world/: README.md  main.py
samples/03_counter_command/: README.md  home.vue  main.py
samples/04_multi_view/: README.md  home.vue  main.py
samples/05_file_upload/: README.md  main.py
samples/06_chat_stream/: README.md  main.py
samples/07_3d_scene/: README.md  home.vue  main.py
samples/08_plotly_dashboard/: README.md  main.py
samples/09_markdown_render/: README.md  main.py
samples/10_full_dashboard/: README.md  main.py  metric.vue  uploads.vue
samples/11_plotly_advanced/: README.md  home.vue  main.py
samples/12_extension_workbench/: README.md  main.py
samples/13_basic_components/: README.md  main.py
samples/analytics_dashboard/: README.md  home.vue  main.py
samples/basic_components/: README.md  home.vue  main.py
samples/capstone_dashboard/: README.md  chat.vue  home.vue  main.py
samples/chat_stream/: README.md  home.vue  main.py
samples/counter/: README.md  main.py
samples/extension_workbench/: README.md  home.vue
samples/file_upload/: README.md  home.vue  main.py
samples/hello_world/: README.md  home.vue  main.py
samples/markdown_render/: README.md  home.vue  main.py
samples/multi_view/: NavDrawer.vue  README.md  main.py  timer.vue
scripts/: bundle_assets.py  content_guard.py
tests/: conftest.py  test_asset_server.py  test_dev_reload.py  test_no_external_network.py  test_path_validation.py  test_sample_conventions.py  test_sample_session_router.py  test_shell.py  test_stage.py  test_zip_server.py
tests/e2e/: conftest.py  (+7 more)
(+21 files in other folders)
